<resources>
    <string name="app_name">Grocery Verse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="your_address">Enter Your Address</string>
    <string name="your_name">Enter Your Name</string>
    <string name="your_contact_number">Enter Mobile Number</string>
    <string name="your_email">Enter Your Email</string>
    <string name="confirm_order">Confirm</string>
    <string name="order_details">Enter Your Details</string>
    <string name="login">Login</string>
    <string name="let_s_explore">Let\'s Explore</string>
    <string name="welcome_text">‘The Grocery Store\' is India’s biggest grocery store online sustenance. With more than 18,000 items and over 1000 brands on our list, you will discover all that you are searching for.</string>
    <string name="explore_us">Explore Us</string>
    <string name="welcome_to_grocery_store_app">Welcome To Grocery Store App</string>
    <string name="click_here">Click here</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_type">Enter product type</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_rating">Enter rating</string>
    <string name="enter_description">Enter description</string>
    <string name="add_image">Add Image</string>
    <string name="add_to_firebase">Add To Firebase</string>
    <string name="cancel">Cancel</string>
    <string name="wair_for_image_uploaded_message_show">"*Wait for Image Uploaded Message "</string>
    <string name="enter_category_discount">Enter Category Discount</string>
    <string name="enter_category_type">Enter Category Type</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_product_discount">Enter Product Discount</string>
    <string name="enter_popular_product_name">Enter Popular Product Name</string>
</resources>