<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".admin.AddProductActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:backgroundTint="@color/dark_green"
        app:cardCornerRadius="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="80dp"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/prod_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/enter_product_name"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/prod_type"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/enter_product_type"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/prod_price"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/enter_price"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/prod_rating"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/enter_rating"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/prod_description"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/enter_description"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/prod_imgurl"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:drawableLeft="@drawable/add"
                    android:hint="@string/add_image"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add_to_firebase"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:layout_marginTop="20dp"
                    android:text="@string/wair_for_image_uploaded_message_show"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


